# nitro_enclave_attestation

./: Cargo.toml  dockerfile  socat.md
parent/: parent_rust_app
src/: main.rs
