[package]
name = "nitro_enclave_attestation"
version = "0.1.0"
edition = "2021"

[dependencies]
vsock = "0.1.3" # VSOCK crate to communicate with the host
nitro-enclaves-attestation-doc = "0.1" # Nitro SDK to get the attestation document
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


